fixed mobile responsive layout bugs

--- a/src/app/components/NavBar/styles.module.css
+++ b/src/app/components/NavBar/styles.module.css
@@ -16,6 +16,10 @@
     position: fixed;
 }
 
+.containerMobileHome {
+    padding: 24px;
+}
+
 .leftWrapper {
     display: flex;
     flex-direction: flex-start;
